--- a/projectdemo1/build.gradle
+++ b/projectdemo1/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.4'
 	id 'io.spring.dependency-management' version '1.1.3'
+	id 'com.google.cloud.tools.jib' version '3.3.1'
 }
 
 group = 'com.example'
@@ -20,6 +21,16 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'
+}
+
+jib {
+	to{
+		image = 'registry.hub.docker.com/fidelsouza/repository1'
+		auth {
+			username = 'fidelsouza'
+			password = 'f190793790'
+		}
+	}
 }
 
 tasks.named('test') {
